--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             In addition, I’ve replicated the same trainings available for French users in Romania as well, for Romanian speakers.</p>
         <p>Responsibilities:<br>
             • Provide support to all users in the company for SharePoint 2016<br>
-            • Conduct online trainings for SharePoint 2016</p>
+            • Conduct online trainings for SharePoint 2016 and SharePoint Online</p>
     </div>
 
     <div class="experience-row">
