--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <img class="profile-picture" src="images/profile_picture.png" alt="profile-picture">
     <h2>Hello.</h2>
     <p class="bio">I'm a SharePoint Digital Coach, currently learning Python. I love traveling and I dream of coding on the beach 💛<br>This page was done in Python using HTML and CSS.</p>
+    <br>
+    <p class="bio">Recent activity: "Programator Ajutor" diploma - obtained June 2023.</p>
   </div>
   <hr>
 
@@ -128,9 +130,14 @@
     <div class="diplomas">
         <img class="degrees-image" src="images/diplomas.png" alt="diplomas-image">
         <h2 class="degrees-title">My degrees and diplomas.</h2>
-        <p>Romanian-American University, Law School, Bachelor’s degree, June 2011<br>
-            Lucian Blaga Highscool, Highschool diploma, June 2006<br>
-            Authorized French Translator and Interpreter, Ministry of Justice, October 2017</p>
+        <p>Autoritatea Nationala pentru Calificari, "Programator Ajutor" diploma, June 2023<br>
+            IT Factory, "Introduction to Python" course, Certificate of Graduation, May 2023<br>
+            Udemy, "100 Days of Code: The Complete Python Pro Bootcamp for 2023", Certificate of Completion, February 2023<br>
+            Udemy, "Python - Solve 250 Python Exercises", Certificate of Completion, January 2023
+            Authorized French Translator and Interpreter, Ministry of Justice, October 2017<br>
+            Romanian-American University, Law School, Bachelor’s degree, June 2011<br>
+            Lucian Blaga Highscool, Highschool diploma, June 2006</p>
+            
     </div>
 
   <hr>
@@ -148,7 +155,7 @@
 
     <div class="bottom-container">
         <a class="footer-link" href="https://www.linkedin.com/in/denisebanisor/">LinkedIn</a>
-        <p class="copyright">© 2022 Denise Banisor.</p>
+        <p class="copyright">© 2023 Denise Banisor.</p>
     </div>
 
 </body>
