--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
       <img class="computer-image" src="images/skill1.png" alt="computer-skills">
       <h3>Computer skills</h3>
         <p>MS Office Pack (Teams, OneDrive, OneNote, Word, Excel, PowerPoint, Outlook)<br>
-        Database Software (Salesforce, Apex, SharePoint On-Premises, SharePoint Online)<br>
+        Database Software (Apex, SharePoint On-Premises, SharePoint Online)<br>
         Reporting and forecasting (Oracle E-Business Suite, CRM Fusion, Sales Cloud)<br>
-        Programming languages (Python, HTML, CSS)</p>
+        Programming languages & connected (Python, Flask, SQLite, HTML, CSS)</p>
     </div>
 
     <div class="skill-row">
