--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
     <h3>If you want to reach me, you can do it here:</h3>
     <p class="contact-message">
         Phone number: +40 751 512 677<br>
-        E-mail : denise.banisor@gmail.com</p>
+        E-mail : denise.banisor@gmail.com<br>
+        Github: https://github.com/dbanisor</p>
     <a class="btn" href="mailto:denise.banisor@gmail.com">CONTACT ME</a>
   </div>
 </div>
