--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <p class="contact-message">
         Phone number: +40 751 512 677<br>
         E-mail : denise.banisor@gmail.com<br>
-        Github: <a href="https://github.com/dbanisor">https://github.com/dbanisor</a>
+        Github: <a href="https://github.com/dbanisor">https://github.com/dbanisor</a></p>
     <a class="btn" href="mailto:denise.banisor@gmail.com">CONTACT ME</a>
   </div>
 </div>
