--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
       <img class="inetum-image" src="images/inetum.png" alt="inetum-logo">
       <h3 class="experience-title">SharePoint Digital Coach</h3>
         <h4>Société Générale Global Solution Centre and Inetum Romania<br>March 2019 – Present</h4>
+        <p>I created a Python app that would help gather training feedbacks from multiple Excel files, centralize them in an existing or new file and then run some calculations in order to present some performance indices. For this app I used Tkinter, pandas, shutil, os, openpyxl, and datetime.
+</p>
         <p>I managed to solve over 900 support cases on SharePoint On Premise.
              At my trainings, there were over 350 users trained on SharePoint 2016 and I’ve created and started trainings on a new tool, SharePoint Online with currently over 150 users trained.
             I’ve adapted and improved the support and the trainings provided to users on the before mentioned tools in order to better respond to the users’ needs.
@@ -108,10 +110,10 @@
     <div class="skill-row">
       <img class="computer-image" src="images/skill1.png" alt="computer-skills">
       <h3>Computer skills</h3>
-        <p>MS Office Pack (Teams, OneDrive, OneNote, Word, Excel, PowerPoint, Outlook)<br>
+        <p>Programming languages & connected (Python, Flask, SQLite, Git, OOP, HTML, CSS)</p>
+        MS Office Pack (Teams, OneDrive, OneNote, Word, Excel, PowerPoint, Outlook)<br>
         Database Software (Apex, SharePoint On-Premises, SharePoint Online)<br>
         Reporting and forecasting (Oracle E-Business Suite, CRM Fusion, Sales Cloud)<br>
-        Programming languages & connected (Python, Flask, SQLite, HTML, CSS)</p>
     </div>
 
     <div class="skill-row">
@@ -130,7 +132,8 @@
     <div class="diplomas">
         
         <h2 class="degrees-title">My degrees and diplomas.</h2>
-        <p>Autoritatea Nationala pentru Calificari, "Programator Ajutor" diploma, June 2023<br>
+        <p>Kreativstorm Hands-on Training Program - Python Development, Certificate of Completion, October 2023<br>
+            Autoritatea Nationala pentru Calificari, "Programator Ajutor" diploma, June 2023<br>
             IT Factory, "Introduction to Python" course, Certificate of Graduation, May 2023<br>
             Udemy, "100 Days of Code: The Complete Python Pro Bootcamp for 2023", Certificate of Completion, February 2023<br>
             Udemy, "Python - Solve 250 Python Exercises", Certificate of Completion, January 2023
